# terminal_editor

./: PKGBUILD  setup.py
terminal_editor/: main.c  main.py  terminal_editor  test.sh  ui_main.glade~
unused/: pyproject.toml  terminal_editor.desktop  ui_main.glade
