[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal_editor"
version = "0.1.0"
description = "A simple GTK terminal editor"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "pygobject>=3.36.0",
]

[tool.setuptools]
packages = ["terminal_editor"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
terminal_editor = "terminal_editor.main:main"
